--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,10 @@
   box-shadow: 0 0 0.125em 0.125em rgb(211, 210, 210) !important;
 }
 
+button > * {
+  pointer-events: none;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
