--- a/src/App.css
+++ b/src/App.css
@@ -8,43 +8,28 @@
 }
 
 .input:focus,
-.textarea:focus,
-.select select:focus,
-.is-focused.input,
-.is-focused.textarea,
-.select select.is-focused,
-.input:active,
-.textarea:active,
-.select select:active,
-.is-active.input,
-.is-active.textarea,
-.select select.is-active,
-.button:focus:not(:active),
-.button.is-focused:not(:active),
-.button.is-link:focus:not(:active),
-.button.is-link.is-focused:not(:active),
-.is-primary.input:focus,
-.is-primary.textarea:focus,
-.is-primary.is-focused.input,
-.is-primary.is-focused.textarea,
-.is-primary.input:active,
-.is-primary.textarea:active,
-.is-primary.is-active.input,
-.is-primary.is-active.textarea,
-.select.is-link select:focus,
-.select.is-link select.is-focused,
-.select.is-link select:active,
-.select.is-link select.is-active,
-.file.is-link:focus .file-cta,
-.file.is-link.is-focused .file-cta {
+.input:active, 
+button:focus,
+button:active
+{
   border-color: #363636 !important;
   box-shadow: 0 0 0.125em 0.125em rgb(211, 210, 210) !important;
+}
+.reset {
+  color: white !important;
+  background-color: orange !important;
+  border-color: darkorange !important;
+}
+
+.reset:focus,
+.reset:active {
+  border-color: rgba(252, 127, 37, 0.974) !important;
+  box-shadow: 0 0 0.125em 0.05em  rgba(252, 127, 37, 0.974) !important;
 }
 
 button > * {
   pointer-events: none;
 }
-
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
